# legion

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
legion/: Cargo.toml  __init__.py
legion/migrate/: __init__.py  __main__.py  core.sql
legion/src/: main.rs  migrate.rs  server.rs
legion/src/migrations/: schema.sql
legion/utils/: db.py
tests/: test_base.py
