[package]
name = "legion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
serde = "1.0.188"
serde_json = "1.0.107"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls" , "postgres", "chrono"] }
chrono = { version = "0.4.31", features = ["serde"] }
tokio = { version = "1.33.0", features = ["full"] }
env_logger = "0.10.0"
log = "0.4.20"
duct = "0.13.6"
