[package]
name = "legion"
version = "0.1.0"
edition = "2021"
authors = ["Roshan Pawar <roshan@r614.dev>"]
description = "Postgres Job Queue/Worker"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
serde = "1.0.188"
serde_json = "1.0.107"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls" , "postgres", "chrono"] }
chrono = { version = "0.4.31", features = ["serde"] }
tokio = { version = "1.33.0", features = ["full"] }
env_logger = "0.10.0"
log = "0.4.20"
duct = "0.13.6"
